# implicitv1

./: .gitattributes  .gitignore  CMakeLists.txt  ImplicitModeling.sln  README.md  implicit_lua.props  implicitkernel.props  implicitshell.rc  opencl.props  opengl.props  vcpkg.json
.github/workflows/: cmake.yml
ImplicitModeling/: ImplicitModeling.sln
ImplicitModeling/implicit/: implicit.vcxproj  implicit.vcxproj.filters
dependencies/glfw-3.3.2.WIN64/lib-vc2012/: glfw3.lib  glfw3dll.lib
dependencies/glfw-3.3.2.WIN64/lib-vc2013/: glfw3.lib  glfw3dll.lib
dependencies/glfw-3.3.2.WIN64/lib-vc2015/: glfw3.lib  glfw3dll.lib
dependencies/lightOCLSDK/include/CL/: cl.h  cl.hpp  cl2.hpp  cl_d3d10.h  cl_d3d11.h  cl_dx9_media_sharing.h  cl_dx9_media_sharing_intel.h  cl_egl.h  cl_ext.h  cl_ext_intel.h  cl_gl.h  cl_gl_ext.h  cl_icd.h  cl_platform.h  cl_va_api_media_sharing_intel.h  cl_version.h  opencl.h
dependencies/lua535/: lua53.lib
dependencies/lua535/include/: luaconf.h
implicit/: camera.cpp  camera.h  gl_util.cpp  gl_util.h  host_primitives.cpp  host_primitives.h  implicit.cpp  implicit.vcxproj  implicit.vcxproj.filters  kernel_sources.h  lua535.props  lua_interface.cpp  lua_interface.h  opencl.props  opengl.props  viewer.cpp  viewer.h
implicit_lua/: implicit_lua.cpp  implicit_lua.vcxproj  implicit_lua.vcxproj.filters
implicit_lua/include/: implicit_lua.h
implicitkernel/: host_primitives.cpp  implicitkernel.vcxproj  implicitkernel.vcxproj.filters  kernel_sources.cpp  kernel_sources.h  viewer.cpp
implicitkernel/include/: host_primitives.h  viewer.h
implicitshell/: implicitshell.vcxproj  implicitshell.vcxproj.filters  lua_interface.cpp  main.cpp  resource.h
include/implicitkernel/: host_primitives.h  viewer.h
include/implicitlua/: luabindings.h
include/kernels/: kernel_primitives.clh  primitives.clh
kernels/: cube.cl  kernel_primitives.clh  kernel_primitives.h  noise.cl  primitives.h  raytrace.h  render.cl
src/implicitkernel/: host_primitives.cpp  kernel_sources.cpp  viewer.cpp
src/implicitlua/: luabindings.cpp
src/implicitshell/: main.cpp
src/kernels/: render.cl
testfiles/: clubtest.lua  filleted_intersection.lua  filleted_union.lua  partx.lua  renderbug.imp  renderbug.lua  ring_lattice.imp  schwarz_example.imp  schwarz_example.lua  testblend.imp  testblend.lua  viewertest.imp  viewertest.lua
